--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,10 @@
         "unordered_map": "cpp",
         "utility": "cpp",
         "vector": "cpp",
-        "fstream": "cpp"
+        "fstream": "cpp",
+        "deque": "cpp",
+        "stack": "cpp",
+        "iomanip": "cpp",
+        "filesystem": "cpp"
     }
 }
